update car index to properly display each property
Co-authored-by: James Henager <jameschenager@gmail.com>
Co-authored-by: SPdowns <spdowns@protonmail.com>

--- a/CarDealership/Views/Cars/CreateCar.cshtml
+++ b/CarDealership/Views/Cars/CreateCar.cshtml
@@ -1,5 +1,9 @@
 <form action="/cars" method="post">
-  <label for="description">Add a new item</label>
-  <input id="description" name="description" type="text">
+  <label for="makeModel">Enter Make Model</label>
+  <input id="makeModel" name="makeModel" type="text">
+  <label for="price">Enter Price</label>
+  <input id="price" name="price" type="text">
+  <label for="miles">Enter Miles</label>
+  <input id="miles" name="miles" type="text">
   <button type="submit">Submit</button>
 </form>
